--- a/app/src/main/res/layout/activity_ax_fragment.xml
+++ b/app/src/main/res/layout/activity_ax_fragment.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.FragmentPageActivity">
+    tools:context=".fragment.axdefault.AxFragmentActivity">
 
-    <Button
-        android:id="@+id/ax_fragment_btn"
-        android:layout_width="@dimen/activity_button_width"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_fragment_ax"
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constrainedHeight="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
