--- a/app/src/main/res/layout/fragment_ax_first.xml
+++ b/app/src/main/res/layout/fragment_ax_first.xml
@@ -3,30 +3,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="top"
     tools:context=".fragment.axdefault.fragments.AxFirstFragment">
 
-    <Button
-        android:id="@+id/ax_first_to_second"
-        android:layout_width="@dimen/activity_button_width"
-        android:layout_height="@dimen/activity_button_height"
-        android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/activity_button_height"
-        android:text="@string/fragment_goto_second"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="First Fragment" />
 
-    <Button
-        android:id="@+id/ax_first_to_third"
-        android:layout_width="@dimen/activity_button_width"
-        android:layout_height="@dimen/activity_button_height"
-        android:layout_gravity="center"
-        android:text="@string/fragment_goto_third"/>
+        <EditText
+            android:id="@+id/ax_first_editor_1"
+            android:layout_width="@dimen/activity_button_width"
+            android:layout_height="wrap_content"
+            android:hint="param_1"/>
 
-    <Button
-        android:id="@+id/ax_first_to_fourth"
-        android:layout_width="@dimen/activity_button_width"
-        android:layout_height="@dimen/activity_button_height"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/activity_button_height"
-        android:text="@string/fragment_goto_fourth"/>
+        <EditText
+            android:id="@+id/ax_first_editor_2"
+            android:layout_width="@dimen/activity_button_width"
+            android:layout_height="wrap_content"
+            android:hint="param_2"/>
+
+        <Button
+            android:id="@+id/ax_first_to_second"
+            android:layout_width="@dimen/activity_button_width"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/activity_button_text_size"
+            android:text="@string/fragment_goto_second"/>
+
+        <Button
+            android:id="@+id/ax_first_to_third"
+            android:layout_width="@dimen/activity_button_width"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/activity_button_text_size"
+            android:text="@string/fragment_goto_third"/>
+
+        <Button
+            android:id="@+id/ax_first_to_fourth"
+            android:layout_width="@dimen/activity_button_width"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/activity_button_text_size"
+            android:text="@string/fragment_goto_fourth"/>
+    </LinearLayout>
 
 </FrameLayout>
