--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -16,4 +16,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/navigation_fragment_btn"
+        android:layout_width="@dimen/activity_button_width"
+        android:layout_height="wrap_content"
+        android:text="@string/activity_fragment_navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/ax_fragment_btn"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
