--- a/app/src/main/res/layout/activity_event_dispatch_test.xml
+++ b/app/src/main/res/layout/activity_event_dispatch_test.xml
@@ -4,30 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".event.EventDispatchTestActivity">
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/event_container_top"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        tools:ignore="MissingConstraints">
+
         <LinearLayout
+            android:id="@+id/event_container_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <Button
-                android:id="@+id/fragment_btn"
-                android:layout_width="@dimen/activity_button_width"
+            <TextView
+                android:id="@+id/touch_event_btn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activity_fragment"/>
+                android:text="Touch" />
+
             <Button
-                android:id="@+id/event_btn"
-                android:layout_width="@dimen/activity_button_width"
+                android:id="@+id/click_event_btn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activity_event"/>
+                android:text="Click" />
         </LinearLayout>
-    </ScrollView>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
