update lifecycle activity

--- a/app/src/main/res/layout/activity_lifecycle.xml
+++ b/app/src/main/res/layout/activity_lifecycle.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".lifecycle.LifecycleActivity">
 
+    <TextView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello Url Scheme" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
