--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,11 @@
                 android:layout_width="@dimen/activity_button_width"
                 android:layout_height="wrap_content"
                 android:text="@string/activity_multi_threading_helper"/>
+            <Button
+                android:id="@+id/lifecycle_btn"
+                android:layout_width="@dimen/activity_button_width"
+                android:layout_height="wrap_content"
+                android:text="ActivityLifecycle"/>
         </LinearLayout>
     </ScrollView>
 
