--- a/supportapp/app/src/main/res/layout/activity_main.xml
+++ b/supportapp/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/url_scheme_btn"
+                android:layout_width="156dp"
+                android:layout_height="wrap_content"
+                android:text="Scheme跳转"/>
+            <Button
+                android:id="@+id/intent_start"
+                android:layout_width="156dp"
+                android:layout_height="wrap_content"
+                android:text="隐式启动"/>
+            <Button
+                android:id="@+id/okhttp_btn"
+                android:layout_width="156dp"
+                android:layout_height="wrap_content"
+                android:text="test"/>
+            <Button
+                android:id="@+id/multi_threading_helper_btn"
+                android:layout_width="156dp"
+                android:layout_height="wrap_content"
+                android:text="test"/>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
